--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ a:visited {
 }
 
 a:hover {
-  background: #f8fc03;
+  background: #a9a8df;
 }
 
 body {
@@ -21,5 +21,13 @@ body {
 footer {
   position: absolute;
   bottom: 0;
-  width: 99%;
+  width: 99.6%;
+}
+
+p.about-me {
+  display: inline-block;
+  text-align: left;
+  max-width: 600px;
+  font-size: x-large;
+
 }
