--- a/main.css
+++ b/main.css
@@ -53,3 +53,15 @@ mark {
   padding-bottom: 0.5em;
   background-color: #d0f3a2;
 }
+
+#zoom {
+  transition: transform .2s;
+  width: 25%;
+  height: 25%;
+  margin: 0 auto;
+}
+
+#zoom:hover {
+  transform: scale(1.75);
+  /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
