--- a/style.css
+++ b/style.css
@@ -55,13 +55,16 @@ mark {
 }
 
 #zoom {
-  transition: transform .2s;
+  transition: transform .6s;
   width: 25%;
   height: 25%;
-  margin: 0 auto;
+  margin: auto;
 }
 
 #zoom:hover {
   transform: scale(1.75);
-  /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
+
+div {
+  display: none;
 }
